--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ matrix:
         packages:
         - linux-libc-dev:i386
         - g++-8-multilib
+        - tree
     env:
     - PREMAKE5="$TRAVIS_BUILD_DIR/dependencies/linux/premake-core/premake5" PROJECT_OS=linux
     before_install:
@@ -36,7 +37,7 @@ install:
   latest changes"; git -C "$GARRYSMOD_COMMON" pull; git -C "$GARRYSMOD_COMMON" submodule
   update --init --recursive; fi
 script: "$BUILD_SCRIPT"
-before_deploy: "zip ${TRAVIS_BUILD_DIR}/projects/${PROJECT_OS}/${COMPILER_PLATFORM}/release/out.zip ${TRAVIS_BUILD_DIR}/projects/${PROJECT_OS}/${COMPILER_PLATFORM}/release/*"
+before_deploy: "tree ${TRAVIS_BUILD_DIR}"
 deploy:
   skip_cleanup: true
   provider: releases
