--- a/.travis.yml
+++ b/.travis.yml
@@ -19,12 +19,10 @@ matrix:
         - ubuntu-toolchain-r-test
         packages:
         - linux-libc-dev:i386
-        - g++-8-multilib
+        - g++-multilib
         - tree
     env:
     - PREMAKE5="$TRAVIS_BUILD_DIR/dependencies/linux/premake-core/premake5" PROJECT_OS=linux
-    before_install:
-    - export CC=gcc-8 export CXX=g++-8
 cache:
   directories:
   - "$TRAVIS_BUILD_DIR/dependencies"
